tests/baselines/reference/requireOfJsonFileWithNoContent.errors.txt
file1.ts(2,12): error TS2339: Property 'a' does not exist on type '{}'.
file1.ts(5,16): error TS2339: Property 'b' does not exist on type '{}'.
file1.ts(6,13): error TS2339: Property 'b' does not exist on type '{}'.


==== file1.ts (3 errors) ====
    import b1 = require('./b.json');
    let x = b1.a;
               ~
!!! error TS2339: Property 'a' does not exist on type '{}'.
    import b2 = require('./b.json');
    if (x) {
        let b = b2.b;
                   ~
!!! error TS2339: Property 'b' does not exist on type '{}'.
        x = (b1.b === b);
                ~
!!! error TS2339: Property 'b' does not exist on type '{}'.
    }
    
==== b.json (0 errors) ====
    